# lsh_recommender

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py  testing.py
app/: __init__.py  main.py  optimal_br.py  recommendation_system.py
lsh_recommender.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
recommendation_system/: recommendation_system.py
