[metadata]
name = lsh_recommender
version = 1.0
author = Your Name
author_email = your.email@example.com
description = A recommendation system package for preprocessing text and providing similarity-based recommendations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mxngjxa/lsh_recommender
license = MIT

[options]
packages = find:
python_requires = >=3.6
install_requires =
    hashlib
    scikit-learn

[options.package_data]
* = *.md

[options.entry_points]
console_scripts =
    recommendation_system = recommendation_system.__main__:main
